base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-node
  namespace: simple-node
  labels:
    app: simple-node
    app.kubernetes.io/component: simple-node
    app.kubernetes.io/instance: simple-node
    app.kubernetes.io/name: simple-node
    app.kubernetes.io/part-of: quarkus-app-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
spec:
  type: ClusterIP
  selector:
    app: simple-node
    deployment: simple-node
  ports:
    - name: http
      protocol: TCP
      port: 3000        # <-- changed from 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
